<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/apellidos" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/trabajador"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trabajador" />

    <RadioButton
        android:id="@+id/genero"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Masculino" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

</LinearLayout>